@@ -9,8 +9,8 @@ package io.camunda.zeebe.util.health;
 
 import static java.util.Objects.requireNonNull;
 
+import com.google.common.collect.ImmutableMap;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.Map;
 import java.util.Optional;
@@ -29,7 +29,7 @@ public record HealthReport(
     String componentName,
     HealthStatus status,
     HealthIssue issue,
-    Map<String, HealthReport> children) {
+    ImmutableMap<String, HealthReport> children) {
   public static final Comparator<HealthReport> COMPARATOR =
       (a, b) -> HealthStatus.COMPARATOR.compare(a.status, b.status);
 
@@ -37,7 +37,6 @@ public record HealthReport(
     requireNonNull(componentName, "componentName cannot be null");
     requireNonNull(status, "status cannot be null");
     requireNonNull(children, "children cannot be null");
-    children = Collections.unmodifiableMap(children);
   }
 
   private HealthReport(
@@ -45,35 +44,34 @@ public record HealthReport(
       final HealthStatus status,
       final HealthIssue issue,
       final Map<String, HealthReport> children) {
-    this(component.componentName(), status, issue, children);
+    this(component.componentName(), status, issue, ImmutableMap.copyOf(children));
   }
 
   public static Optional<HealthReport> fromChildrenStatus(
       final String componentName, final Map<String, HealthReport> children) {
-    final var worstReport = children.values().stream().max(COMPARATOR);
+    // Create a defensive copy to avoid ConcurrentModificationException when
+    // the original map is modified while iterating over the HealthReport
+    final var childrenSnapshot = ImmutableMap.copyOf(children);
+    final var worstReport = childrenSnapshot.values().stream().max(COMPARATOR);
     return worstReport.map(
         report ->
-            new HealthReport(
-                componentName,
-                report.status(),
-                report.issue(),
-                Collections.unmodifiableMap(children)));
+            new HealthReport(componentName, report.status(), report.issue(), childrenSnapshot));
   }
 
   public static HealthReport unknown(final String componentName) {
-    return new HealthReport(componentName, HealthStatus.UNHEALTHY, null, Map.of());
+    return new HealthReport(componentName, HealthStatus.UNHEALTHY, null, ImmutableMap.of());
   }
 
   public static HealthReport healthy(final HealthMonitorable component) {
-    return new HealthReport(component, HealthStatus.HEALTHY, null, Map.of());
+    return new HealthReport(component, HealthStatus.HEALTHY, null, ImmutableMap.of());
   }
 
   public static HealthReport unhealthy(final HealthMonitorable component) {
-    return new HealthReport(component, HealthStatus.UNHEALTHY, null, Map.of());
+    return new HealthReport(component, HealthStatus.UNHEALTHY, null, ImmutableMap.of());
   }
 
   public static HealthReport dead(final HealthMonitorable component) {
-    return new HealthReport(component, HealthStatus.DEAD, null, Map.of());
+    return new HealthReport(component, HealthStatus.DEAD, null, ImmutableMap.of());
   }
 
   public static HealthReport fromStatus(
